# vpma

./: Cargo.toml  README.md  build.rs  filemonitor_scaphandre.c  filemonitor_vm.c
scripts/: attack_demo.sh  power_overhead_test.sh  register_binary_hash.sh  verify_redis_data.py
sgx/: Cargo.toml  Enclave.toml  build.rs
sgx/src/: lib.rs  main.rs  vsnprintf_shim.c
sgx_vm/: Cargo.toml
sgx_vm/src/: blockchain.rs  checkpoint.rs  lib.rs  main.rs  merkle.rs  redis_store.rs
src/: build.rs  lib.rs  main.rs  sgx_runner.rs  sgx_vm_runner.rs  tpm_attestation.rs
src/exporters/: db.rs  export_vm.rs  mod.rs  prometheus.rs  prometheuspush.rs  qemu.rs  stdout.rs  utils.rs
src/sensors/: ebpf_rapl_hash.c  hash_verifier.rs  memory_protection.rs  mod.rs  powercap_rapl.rs
