[package]
name = "scaphandre"
version = "1.0.0"
authors = ["Anonymous"]
edition = "2021"
license = "Apache-2.0"
description = "Electric power/energy consumption monitoring agent."
repository = "https://github.com/<REPO>"
readme = "README.md"
homepage = "https://<PROJECT_HOMEPAGE>"

[workspace]
members = [".", "loader", "sgx", "sgx_vm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loggerv = "0.7"
log = "0.4"
clap = { version = "4.2", features = ["cargo", "derive"] }
regex = "1.7"
riemann_client = { version = "0.9.0", optional = true }
hostname = "0.3.1"
protobuf = "2.28.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
ordered-float = "2.0"
warp10 = { version = "2.0.0", optional = true }
rand = { version = "0.7.3" }
time = "0.3"
colored = "2.0"
chrono = "0.4"
docker-sync = { version = "0.1.2", optional = true }
k8s-sync = { version = "0.2.3", optional = true }
hyper = { version = "0.14", features = ["full"], optional = true }
tokio = { version = "1.26.0", features = ["full"], optional = true}
sysinfo = { version = "0.28.3"}
isahc = { version = "1.7.2", optional = true }

# SGX enclave loader for REAL HARDWARE execution (no simulation)
enclave-runner = { version = "0.7", optional = true }
sgxs-loaders = { version = "0.5", optional = true }
# eBPF Rust bindings
bcc = "0.0.30"
lazy_static = "1.4"
num_cpus = "1.16"
# TPM and cryptographic support
tss-esapi = { version = "7.4", optional = true }
hmac = { version = "0.12", optional = true }
sha2 = "0.10"
hex = "0.4"
ureq = { version = "2.9", default-features = false, features = ["native-tls"] }
# TLS for secure communication with SGX enclave
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"], optional = true }
rustls-pki-types = { version = "1.0", optional = true }
rustls-pemfile = { version = "2.0", optional = true }

[target.'cfg(target_os="linux")'.dependencies]
procfs = { version = "0.15.0" }

[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.27.0", features = ["alloc","Win32_Storage_FileSystem","Win32_Foundation","Win32_Security","Win32_System_IO","Win32_System_Ioctl","Win32_System_Threading", "Win32_System_SystemInformation"]}
windows-service = { version = "0.6.0" }
raw-cpuid = { version = "10.5.0" }
core_affinity = { version = "0.8.1"}
x86 = { version = "0.52.0" }


[features]
default = ["prometheus", "warpten", "json", "containers", "prometheuspush"]
prometheus = ["hyper", "tokio"]
riemann = ["riemann_client"]
json = ["serde", "serde_json"]
containers = ["docker-sync", "k8s-sync"]
warpten = ["warp10"]
prometheuspush = ["isahc"]
qemu = []
use_sgx = ["enclave-runner", "sgxs-loaders", "rustls", "rustls-pki-types", "rustls-pemfile"]  # REAL SGX hardware only with TLS
use_sgx_vm = ["rustls", "rustls-pki-types", "rustls-pemfile"]  # VM-specific SGX enclave for per-process calculation
with_ebpf_guard = []
tpm_attestation = ["hmac"]
tpm_attestation_vm = ["hmac"]  # VM-friendly TPM that fails gracefully

[profile.release]
# LTO required for CFI (Control Flow Integrity)
lto = "thin"
codegen-units = 1
opt-level = 3
strip = false
overflow-checks = true
