[package]
name = "sgx_vm"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# HMAC verification in SGX
hmac = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
# Hex encoding for chain state
hex = { version = "0.4", default-features = false, features = ["alloc"] }
# For MD5 password authentication (PostgreSQL)
md5 = "0.7"
# mbedtls for TLS inside SGX (optional)
mbedtls = { version = "0.12", features = ["std", "ssl", "x509", "rdrand"], optional = true }

# Fortanix SGX SDK for real enclave execution
[target.'cfg(target_env = "sgx")'.dependencies]
# rdrand provides hardware random number generation inside SGX
rdrand = "0.8"
# AES-GCM for sealing data (SGX-compatible)
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }

[features]
default = []
use_mbedtls = ["mbedtls"]
# SGX features are automatically enabled when building for x86_64-fortanix-unknown-sgx target

# Library target: contains your ECALLs
[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

# Binary target: needed to produce an ELF file for SGX
[[bin]]
name = "sgx_vm"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
panic = "abort"

[profile.dev]
panic = "abort"
